[package]
name = "rynd-native"
version = "0.1.0"
edition = "2021"

[profile.release] 
codegen-units = 1
lto = "fat"
panic = "abort"

[lib]
crate-type = ["cdylib"]
 
[dependencies]
ryna-ffi = "0.1.0"
ndarray = { version = "0.16.1", features = ["matrixmultiply-threading"] }
colored = "2.1.0"
lazy_static = "1.5.0"
rustc-hash = "1.1.0"
rand = "0.9.0"
rand_distr = "0.5.1"